--- a/AngularCrud/package.json
+++ b/AngularCrud/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "ag-grid": "^18.1.2",
+    "ag-grid-angular": "^19.0.0",
+    "ag-grid-community": "^19.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
