--- a/AngularCrud/angular.json
+++ b/AngularCrud/angular.json
@@ -24,7 +24,7 @@
             ],
             "styles": [
               {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+                "input": "src/my-custom-theme.scss"
               },
               "src/styles.css"
             ],
